--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
                 </svg>
                 Listar Peças
             </button>
+            <button class="tab-btn" data-tab="configuracao">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <circle cx="12" cy="12" r="3"/>
+                    <path d="M12 1v6m0 6v6M5.64 5.64l4.24 4.24m4.24 4.24l4.24 4.24M1 12h6m6 0h6M5.64 18.36l4.24-4.24m4.24-4.24l4.24-4.24"/>
+                </svg>
+                Configuração
+            </button>
         </nav>
 
         <!-- Content Area -->
@@ -326,6 +333,94 @@
                 </div>
             </section>
 
+            <!-- CONFIGURAÇÃO TAB -->
+            <section id="configuracao" class="tab-content">
+                <div class="config-grid">
+
+                    <!-- Card Clientes -->
+                    <div class="card">
+                        <div class="card-header">
+                            <h2>Clientes</h2>
+                            <p>Gerencie os clientes do sistema</p>
+                        </div>
+                        <div class="form" style="padding: 1.5rem;">
+                            <div class="form-group">
+                                <label for="novo-cliente">Novo Cliente</label>
+                                <div style="display: flex; gap: 0.5rem;">
+                                    <input type="text" id="novo-cliente" placeholder="Digite o nome do cliente" style="flex: 1;">
+                                    <button type="button" id="btn-add-cliente" class="btn btn-primary">
+                                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                            <path d="M12 5v14M5 12h14"/>
+                                        </svg>
+                                        Adicionar
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="config-list" id="lista-clientes">
+                                <!-- Lista de clientes será inserida aqui -->
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card Secretarias -->
+                    <div class="card">
+                        <div class="card-header">
+                            <h2>Secretarias</h2>
+                            <p>Gerencie as secretarias por cliente</p>
+                        </div>
+                        <div class="form" style="padding: 1.5rem;">
+                            <div class="form-group">
+                                <label for="secretaria-cliente">Cliente</label>
+                                <select id="secretaria-cliente">
+                                    <option value="">Selecione um cliente</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="nova-secretaria">Nova Secretaria</label>
+                                <div style="display: flex; gap: 0.5rem;">
+                                    <input type="text" id="nova-secretaria" placeholder="Digite o nome da secretaria" style="flex: 1;">
+                                    <button type="button" id="btn-add-secretaria" class="btn btn-primary">
+                                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                            <path d="M12 5v14M5 12h14"/>
+                                        </svg>
+                                        Adicionar
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="config-list" id="lista-secretarias">
+                                <!-- Lista de secretarias será inserida aqui -->
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card Tipos de Peça -->
+                    <div class="card">
+                        <div class="card-header">
+                            <h2>Tipos de Peça</h2>
+                            <p>Gerencie os tipos de peça disponíveis</p>
+                        </div>
+                        <div class="form" style="padding: 1.5rem;">
+                            <div class="form-group">
+                                <label for="novo-tipo">Novo Tipo de Peça</label>
+                                <div style="display: flex; gap: 0.5rem;">
+                                    <input type="text" id="novo-tipo" placeholder="Digite o tipo de peça" style="flex: 1;">
+                                    <button type="button" id="btn-add-tipo" class="btn btn-primary">
+                                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                            <path d="M12 5v14M5 12h14"/>
+                                        </svg>
+                                        Adicionar
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="config-list" id="lista-tipos">
+                                <!-- Lista de tipos será inserida aqui -->
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+
         </main>
     </div>
 
@@ -334,6 +429,95 @@
         <div class="modal-content">
             <span class="modal-close">&times;</span>
             <img id="modal-image" src="" alt="Comprovação">
+        </div>
+    </div>
+
+    <!-- Modal para editar peça -->
+    <div id="modal-edicao" class="modal">
+        <div class="modal-content-form">
+            <span class="modal-close-edit">&times;</span>
+            <h2>Editar Peça</h2>
+            <form id="form-edicao" class="form">
+                <input type="hidden" id="edit-id">
+                <div class="form-grid">
+                    <div class="form-group">
+                        <label for="edit-cliente">Cliente <span class="required">*</span></label>
+                        <select id="edit-cliente" required>
+                            <option value="">Selecione um cliente</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="edit-secretaria">Secretaria <span class="required">*</span></label>
+                        <select id="edit-secretaria" required>
+                            <option value="">Selecione uma secretaria</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="edit-tipo-peca">Tipo de Peça <span class="required">*</span></label>
+                        <select id="edit-tipo-peca" required>
+                            <option value="">Selecione o tipo</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group full-width">
+                        <label for="edit-nome-peca">Nome da Peça <span class="required">*</span></label>
+                        <input type="text" id="edit-nome-peca" placeholder="Digite o nome da peça" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="edit-data-criacao">Data de Criação <span class="required">*</span></label>
+                        <input type="date" id="edit-data-criacao" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="edit-data-veiculacao">Data de Veiculação</label>
+                        <input type="date" id="edit-data-veiculacao">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="edit-comprovacao">Comprovação (Print)</label>
+                        <div class="file-upload-wrapper">
+                            <input type="file" id="edit-comprovacao" accept="image/*">
+                            <div class="file-upload-placeholder">
+                                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4M17 8l-5-5-5 5M12 3v12"/>
+                                </svg>
+                                <p>Clique para alterar a imagem</p>
+                                <span>Formatos aceitos: PNG, JPG, JPEG - Limite: 5MB</span>
+                            </div>
+                            <div class="file-preview-edit" style="display: none;">
+                                <img id="edit-preview-image" src="" alt="Preview">
+                                <button type="button" class="remove-file-edit">×</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="edit-observacao">Observação</label>
+                        <textarea id="edit-observacao" rows="5" placeholder="Digite observações adicionais sobre a peça..."></textarea>
+                    </div>
+                </div>
+
+                <div class="form-actions">
+                    <button type="button" class="btn btn-secondary" id="btn-cancelar-edicao">
+                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <line x1="18" y1="6" x2="6" y2="18"/>
+                            <line x1="6" y1="6" x2="18" y2="18"/>
+                        </svg>
+                        Cancelar
+                    </button>
+                    <button type="submit" class="btn btn-primary">
+                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"/>
+                            <polyline points="17 21 17 13 7 13 7 21"/>
+                            <polyline points="7 3 7 8 15 8"/>
+                        </svg>
+                        Salvar Alterações
+                    </button>
+                </div>
+            </form>
         </div>
     </div>
 
