style: função de filtrar por cliente e secretaria

--- a/index.html
+++ b/index.html
@@ -300,7 +300,12 @@
                     </div>
 
                     <div class="filter-bar">
-                        <input type="text" id="search-pecas" placeholder="Buscar por nome, cliente ou secretaria...">
+                        <select id="filter-cliente">
+                            <option value="">Todos os clientes</option>
+                        </select>
+                        <select id="filter-secretaria">
+                            <option value="">Todas as secretarias</option>
+                        </select>
                         <select id="filter-tipo">
                             <option value="">Todos os tipos</option>
                             <option value="Matéria">Matéria</option>
