--- a/index.html
+++ b/index.html
@@ -12,8 +12,51 @@
         <!-- Header -->
         <header class="header">
             <div class="header-content">
-                <h1>SIGEPRE</h1>
-                <p class="subtitle">Sistema de Gestão de Peças e Relatórios</p>
+                <div class="header-left">
+                    <h1>SIGEPRE</h1>
+                    <p class="subtitle">Sistema de Gestão de Peças e Relatórios</p>
+                </div>
+                <div class="header-right">
+                    <div class="user-menu">
+                        <button class="user-avatar" id="user-avatar">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+                                <circle cx="12" cy="7" r="4"/>
+                            </svg>
+                            <span id="user-name-display">Visitante</span>
+                        </button>
+                        <div class="user-dropdown" id="user-dropdown">
+                            <div class="dropdown-header">
+                                <strong id="dropdown-user-name">Visitante</strong>
+                                <span id="dropdown-user-role">Sem permissão</span>
+                            </div>
+                            <div class="dropdown-divider"></div>
+                            <button class="dropdown-item" id="btn-login" onclick="abrirLogin()">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/>
+                                    <polyline points="10 17 15 12 10 7"/>
+                                    <line x1="15" y1="12" x2="3" y2="12"/>
+                                </svg>
+                                Entrar
+                            </button>
+                            <button class="dropdown-item" id="btn-admin" onclick="abrirAdmin()" style="display: none;">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <circle cx="12" cy="12" r="3"/>
+                                    <path d="M12 1v6m0 6v6M5.64 5.64l4.24 4.24m4.24 4.24l4.24 4.24M1 12h6m6 0h6M5.64 18.36l4.24-4.24m4.24-4.24l4.24-4.24"/>
+                                </svg>
+                                Administração
+                            </button>
+                            <button class="dropdown-item" id="btn-logout" onclick="logout()" style="display: none;">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/>
+                                    <polyline points="16 17 21 12 16 7"/>
+                                    <line x1="21" y1="12" x2="9" y2="12"/>
+                                </svg>
+                                Sair
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </header>
 
@@ -543,6 +586,120 @@
                     </button>
                 </div>
             </form>
+        </div>
+    </div>
+
+    <!-- Modal de Login -->
+    <div id="modal-login" class="modal">
+        <div class="modal-content-login">
+            <span class="modal-close-login">&times;</span>
+            <div class="login-header">
+                <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+                    <circle cx="12" cy="7" r="4"/>
+                </svg>
+                <h2>Entrar no Sistema</h2>
+                <p>Digite suas credenciais para acessar</p>
+            </div>
+            <form id="form-login" class="form">
+                <div class="form-group">
+                    <label for="login-username">Usuário</label>
+                    <input type="text" id="login-username" placeholder="Digite seu usuário" required autocomplete="username">
+                </div>
+                <div class="form-group">
+                    <label for="login-password">Senha</label>
+                    <input type="password" id="login-password" placeholder="Digite sua senha" required autocomplete="current-password">
+                </div>
+                <button type="submit" class="btn btn-primary" style="width: 100%;">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/>
+                        <polyline points="10 17 15 12 10 7"/>
+                        <line x1="15" y1="12" x2="3" y2="12"/>
+                    </svg>
+                    Entrar
+                </button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Tela de Administração -->
+    <div id="admin-panel" class="admin-panel" style="display: none;">
+        <div class="admin-container">
+            <div class="admin-header">
+                <div>
+                    <h1>Painel de Administração</h1>
+                    <p>Gerencie usuários e permissões do sistema</p>
+                </div>
+                <button class="btn btn-secondary" onclick="fecharAdmin()">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="18" y1="6" x2="6" y2="18"/>
+                        <line x1="6" y1="6" x2="18" y2="18"/>
+                    </svg>
+                    Fechar
+                </button>
+            </div>
+
+            <div class="admin-content">
+                <div class="card">
+                    <div class="card-header">
+                        <h2>Cadastro de Usuários</h2>
+                        <p>Adicione novos usuários e defina suas permissões</p>
+                    </div>
+                    <div class="form" style="padding: 2rem;">
+                        <form id="form-usuario">
+                            <div class="form-grid">
+                                <div class="form-group">
+                                    <label for="novo-usuario">Nome de Usuário <span class="required">*</span></label>
+                                    <input type="text" id="novo-usuario" placeholder="Digite o nome de usuário" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="nova-senha">Senha <span class="required">*</span></label>
+                                    <input type="password" id="nova-senha" placeholder="Digite a senha" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="nova-permissao">Permissão <span class="required">*</span></label>
+                                    <select id="nova-permissao" required>
+                                        <option value="">Selecione a permissão</option>
+                                        <option value="master">Master - Acesso total</option>
+                                        <option value="social_media">Social Media - Inserir e editar material</option>
+                                        <option value="financeiro">Financeiro - Editar e gerar relatórios</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-actions">
+                                <button type="submit" class="btn btn-primary">
+                                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                        <path d="M12 5v14M5 12h14"/>
+                                    </svg>
+                                    Adicionar Usuário
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="card" style="margin-top: 2rem;">
+                    <div class="card-header">
+                        <h2>Usuários Cadastrados</h2>
+                        <p>Gerencie os usuários e suas permissões</p>
+                    </div>
+                    <div class="usuarios-table-wrapper">
+                        <table class="usuarios-table">
+                            <thead>
+                                <tr>
+                                    <th>Usuário</th>
+                                    <th>Permissão</th>
+                                    <th>Descrição</th>
+                                    <th>Ações</th>
+                                </tr>
+                            </thead>
+                            <tbody id="lista-usuarios">
+                                <!-- Usuários serão inseridos aqui -->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
