style: tela de login

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                     <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
                     <circle cx="12" cy="7" r="4"/>
                 </svg>
-                <h2>Entrar no Sistema</h2>
+                            <h2>Entrar</h2>
                 <p>Digite suas credenciais para acessar</p>
             </div>
             <form id="form-login" class="form">
