--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="header-content">
                 <div class="header-left">
                     <h1>SIGEPRE</h1>
-                    <p class="subtitle">Sistema de Gestão de Peças e Relatórios</p>
+                    <p class="subtitle">Sistema de Gestão de Peças e Relatórios - MSL Estratégia</p>
                 </div>
                 <div class="header-right">
                     <div class="user-menu">
