--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="header-content">
                 <div class="header-left">
                     <h1>SIGEPRE</h1>
-                    <p class="subtitle">Sistema de gestão de peças e relatórios - MSL Estratégia</p>
+                    <p class="subtitle">Sistema de gestão de peças e relatórios - MSL</p>
                 </div>
                 <div class="header-right">
                     <div class="user-menu">
