--- a/index.html
+++ b/index.html
@@ -11,7 +11,43 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.31/jspdf.plugin.autotable.min.js"></script>
 </head>
 <body>
-    <div class="container">
+    <!-- Tela de Login -->
+    <div id="login-screen" class="login-screen">
+        <div class="login-container">
+            <div class="login-content">
+                <div class="login-header">
+                    <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+                        <circle cx="12" cy="7" r="4"/>
+                    </svg>
+                    <h1>SIGEPRE</h1>
+                    <h2>Entrar</h2>
+                    <p>Digite suas credenciais para acessar o sistema</p>
+                </div>
+                <form id="form-login-screen" class="login-form">
+                    <div class="form-group">
+                        <label for="login-username-screen">Usuário</label>
+                        <input type="text" id="login-username-screen" placeholder="Digite seu usuário" required autocomplete="username">
+                    </div>
+                    <div class="form-group">
+                        <label for="login-password-screen">Senha</label>
+                        <input type="password" id="login-password-screen" placeholder="Digite sua senha" required autocomplete="current-password">
+                    </div>
+                    <button type="submit" class="btn btn-primary login-submit">
+                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/>
+                            <polyline points="10 17 15 12 10 7"/>
+                            <line x1="15" y1="12" x2="3" y2="12"/>
+                        </svg>
+                        Entrar
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Sistema Principal -->
+    <div class="container" id="main-container" style="display: none;">
         <!-- Header -->
         <header class="header">
             <div class="header-content">
@@ -34,14 +70,6 @@
                                 <span id="dropdown-user-role">Sem permissão</span>
                             </div>
                             <div class="dropdown-divider"></div>
-                            <button class="dropdown-item" id="btn-login" onclick="abrirLogin()">
-                                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/>
-                                    <polyline points="10 17 15 12 10 7"/>
-                                    <line x1="15" y1="12" x2="3" y2="12"/>
-                                </svg>
-                                Entrar
-                            </button>
                             <button class="dropdown-item" id="btn-admin" onclick="abrirAdmin()" style="display: none;">
                                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                     <circle cx="12" cy="12" r="3"/>
